--- a/package.json
+++ b/package.json
@@ -18,33 +18,45 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "deploy:dev": "npm run build && npx serverless deploy --stage dev",
+    "deploy:prod": "npm run build && npx serverless deploy --stage prod"
   },
   "dependencies": {
-    "@nestjs/common": "^7.5.1",
+    "@nestjs/common": "^10.3.8",
     "@nestjs/config": "^0.5.0",
-    "@nestjs/core": "^7.5.1",
+    "@nestjs/core": "^10.3.8",
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.0",
-    "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/platform-express": "^10.3.8",
+    "@nestjs/typeorm": "^10.0.2",
+    "@types/aws-serverless-express": "^3.3.9",
+    "aws-serverless-express": "^3.4.0",
+    "express": "^4.19.2",
     "helmet": "^4.2.0",
-    "passport": "^0.4.1",
+    "install": "^0.13.0",
+    "npm": "^10.6.0",
+    "passport": "^0.6.0",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pg": "^8.11.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
+    "typeorm": "^0.3.20",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.2",
-    "@nestjs/schematics": "^7.2.1",
+    "@nestjs/cli": "^10.3.2",
+    "@nestjs/schematics": "^10.1.1",
     "@nestjs/testing": "^7.5.1",
-    "@types/express": "^4.17.3",
+    "@types/express": "^4.17.21",
     "@types/jest": "26.0.10",
     "@types/node": "^13.13.30",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
+    "@types/pg": "^8.11.5",
+    "@types/superagent": "^8.1.6",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
@@ -54,12 +66,14 @@
     "jest": "26.4.2",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
+    "serverless-http": "^3.2.0",
+    "serverless-offline": "^13.4.0",
     "supertest": "^4.0.2",
     "ts-jest": "26.2.0",
     "ts-loader": "^6.2.1",
     "ts-node": "9.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.4"
+    "typescript": "^5.4.5"
   },
   "jest": {
     "moduleFileExtensions": [
